{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 1100,
  "lineage": "7e2fdb12-81d2-c508-3351-bef66fc80d02",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ec2_deployer_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:loadbalancer/app/ec2deployer-alb-DEV/930c9038c033efec",
            "arn_suffix": "app/ec2deployer-alb-DEV/930c9038c033efec",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ec2deployer-alb-DEV-1014631018.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:loadbalancer/app/ec2deployer-alb-DEV/930c9038c033efec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ec2deployer-alb-DEV",
            "security_groups": [
              "sg-06b7602c3971a6ac8",
              "sg-0f57b1c30f655e475"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a096b8fe5167ed6e"
              },
              {
                "subnet_id": "subnet-0cd4ed0a3a7f9477a"
              }
            ],
            "subnets": [
              "subnet-0a096b8fe5167ed6e",
              "subnet-0cd4ed0a3a7f9477a"
            ],
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-alb-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "TYPE": "alb"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-alb-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "TYPE": "alb"
            },
            "vpc_id": "vpc-0c0b3f8c3af9e70b8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ec2_deployer_alb_sg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener/app/ec2deployer-alb-DEV/930c9038c033efec/2f7a4028e04b9353",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/ec2-target-group/ba141e4c9316f849",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener/app/ec2deployer-alb-DEV/930c9038c033efec/2f7a4028e04b9353",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:loadbalancer/app/ec2deployer-alb-DEV/930c9038c033efec",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ec2_deployer_alb",
            "aws_alb_target_group.ec2_target_group",
            "aws_security_group.ec2_deployer_alb_sg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/ec2-target-group/ba141e4c9316f849",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener-rule/app/ec2deployer-alb-DEV/930c9038c033efec/2f7a4028e04b9353/bc1c0b8e90c63c26",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "*ec2deployer.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener-rule/app/ec2deployer-alb-DEV/930c9038c033efec/2f7a4028e04b9353/bc1c0b8e90c63c26",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:listener/app/ec2deployer-alb-DEV/930c9038c033efec/2f7a4028e04b9353",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ec2_deployer_alb",
            "aws_alb_listener.alb_listener",
            "aws_alb_target_group.ec2_target_group",
            "aws_security_group.ec2_deployer_alb_sg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ec2_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/ec2-target-group/ba141e4c9316f849",
            "arn_suffix": "targetgroup/ec2-target-group/ba141e4c9316f849",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/ec2-target-group/ba141e4c9316f849",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ec2-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "ec2_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/ec2-target-group/ba141e4c9316f849-20230317141448806200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191805346255:targetgroup/ec2-target-group/ba141e4c9316f849",
            "target_id": "i-0aa7caabeab80ed8d"
          },
          "dependencies": [
            "aws_alb_target_group.ec2_target_group",
            "aws_instance.my_tf_ec2",
            "aws_security_group.ec2_deployer_alb_sg",
            "aws_security_group.my_tf_ec2_sg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_tf_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:191805346255:instance/i-0aa7caabeab80ed8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa7caabeab80ed8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ec35ca8ea63500a",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-54-226-245-112.compute-1.amazonaws.com",
            "public_ip": "54.226.245.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9f40e595e343bde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06b7602c3971a6ac8",
              "sg-072421748e7cd2493"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd4ed0a3a7f9477a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b7602c3971a6ac8",
              "sg-072421748e7cd2493"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_deployer_alb_sg",
            "aws_security_group.my_tf_ec2_sg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:internet-gateway/igw-0423978b2dac38204",
            "id": "igw-0423978b2dac38204",
            "owner_id": "191805346255",
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-igw-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "TYPE": "igw"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-igw-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "TYPE": "igw"
            },
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0423978b2dac38204",
            "id": "r-rtb-0d68559fd398bd0de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d68559fd398bd0de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.ec2_deployer_vpc_route_table",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ec2_deployer_vpc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:route-table/rtb-0d68559fd398bd0de",
            "id": "rtb-0d68559fd398bd0de",
            "owner_id": "191805346255",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_to_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf01b49bc092db1",
            "route_table_id": "rtb-0d68559fd398bd0de",
            "subnet_id": "subnet-0cd4ed0a3a7f9477a"
          },
          "dependencies": [
            "aws_route_table.ec2_deployer_vpc_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_to_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0231dd9d92a0502c4",
            "route_table_id": "rtb-0d68559fd398bd0de",
            "subnet_id": "subnet-0a096b8fe5167ed6e"
          },
          "dependencies": [
            "aws_route_table.ec2_deployer_vpc_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_deployer_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:security-group/sg-0f57b1c30f655e475",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB from Internet to HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB from Internet to HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f57b1c30f655e475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from Internet to ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from Internet to ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http_from_internet",
            "name_prefix": "",
            "owner_id": "191805346255",
            "revoke_rules_on_delete": false,
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_tf_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:security-group/sg-072421748e7cd2493",
            "description": "Allow HTTP from ALB SG",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from instance to ALB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f57b1c30f655e475"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from instance to ALB SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f57b1c30f655e475"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-072421748e7cd2493",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB security group to instance",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f57b1c30f655e475"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from ALB security group to instance",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f57b1c30f655e475"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http_from_alb_sg_to_ec2",
            "name_prefix": "",
            "owner_id": "191805346255",
            "revoke_rules_on_delete": false,
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_deployer_alb_sg",
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:security-group/sg-06b7602c3971a6ac8",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b7602c3971a6ac8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CustomSG",
            "name_prefix": "",
            "owner_id": "191805346255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:subnet/subnet-0cd4ed0a3a7f9477a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd4ed0a3a7f9477a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191805346255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-public-subnet-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "SUBNET_TYPE": "public",
              "TYPE": "subnet"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-public-subnet-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "SUBNET_TYPE": "public",
              "TYPE": "subnet"
            },
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:subnet/subnet-0a096b8fe5167ed6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a096b8fe5167ed6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191805346255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-public-subnet-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "SUBNET_TYPE": "public",
              "TYPE": "subnet"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-public-subnet-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "SUBNET_TYPE": "public",
              "TYPE": "subnet"
            },
            "vpc_id": "vpc-0c0b3f8c3af9e70b8"
          },
          "dependencies": [
            "aws_vpc.ec2_deployer_vpc",
            "random_id.deployment_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_deployer_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191805346255:vpc/vpc-0c0b3f8c3af9e70b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02547d3aa9ae15704",
            "default_route_table_id": "rtb-017e06a13a5c64fe9",
            "default_security_group_id": "sg-081806a023ae4e811",
            "dhcp_options_id": "dopt-541d7d2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0b3f8c3af9e70b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017e06a13a5c64fe9",
            "owner_id": "191805346255",
            "tags": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-vpc-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "TYPE": "vpc"
            },
            "tags_all": {
              "DEPLOYMENT_ID": "9b2e87e3354f",
              "ENVIRONMENT": "DEV",
              "NAME": "ec2deployer-vpc-DEV",
              "PROJECT_COMPONENT": "network-infrastructure",
              "PROJECT_NAME": "ec2deployer",
              "TYPE": "vpc"
            }
          },
          "dependencies": [
            "random_id.deployment_id"
          ]
        }
      ]
    }
  ]
}